<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".UpdateTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/editTextTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:paddingStart="8dp"
            android:drawableStart="@drawable/ic_baseline_add_task_24"
            android:background="@drawable/input"
            android:drawablePadding="4dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:hint="@string/task_name" />

        <EditText
            android:id="@+id/editTextDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:paddingStart="8dp"
            android:drawableStart="@drawable/ic_baseline_description_24"
            android:background="@drawable/input"
            android:drawablePadding="4dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:hint="@string/description_name" />

        <EditText
            android:id="@+id/editTextFinishBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:paddingStart="8dp"
            android:drawableStart="@drawable/ic_baseline_date_range_24"
            android:background="@drawable/input"
            android:drawablePadding="4dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:hint="@string/completed_date" />

        <CheckBox
            android:id="@+id/checkBoxFinished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mark_as_finished" />

        <Button
            android:id="@+id/mBtnUpdate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/button"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="@color/colorLight" />

        <Button
            android:id="@+id/mBtnDelete"
            android:background="@drawable/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/colorLight" />

    </LinearLayout>

</RelativeLayout>