<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".AddTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="15dp">

        <EditText
            android:id="@+id/mEditTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:paddingStart="8dp"
            android:drawableStart="@drawable/ic_baseline_add_task_24"
            android:background="@drawable/input"
            android:drawablePadding="4dp"
            android:textAlignment="center"
            android:hint="@string/task_name" />

        <EditText
            android:id="@+id/mEditDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:paddingStart="8dp"
            android:drawableStart="@drawable/ic_baseline_description_24"
            android:background="@drawable/input"
            android:drawablePadding="4dp"
            android:paddingTop="1dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:hint="@string/description" />

        <EditText
            android:id="@+id/mEditFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:paddingStart="8dp"
            android:drawableStart="@drawable/ic_baseline_date_range_24"
            android:background="@drawable/input"
            android:drawablePadding="4dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:hint="@string/complete_date" />

        <Button
            android:id="@+id/mBtnSave"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/button"
            android:text="@string/save" />

    </LinearLayout>

</RelativeLayout>